--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ugly-gauntlet-bot",
   "version": "2.0.0",
   "description": "The Ugly Gauntlet: a fully gamified Discord battle royale bot for the Charm of the Ugly NFT project",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
