--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-BOT_TOKEN=your_bot_token
-CLIENT_ID=your_global_bot_client_id
+# === Discord Bot Token ===
+DISCORD_TOKEN=your_discord_bot_token_here
+
+# === Optional: Other Secrets (if needed in future) ===
+# DRIP_API_TOKEN=your_drip_api_token_here
