--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 
 # === Optional: Other Secrets (if needed in future) ===
-# DRIP_API_TOKEN=your_drip_api_token_here
+DRIP_API_TOKEN=your_drip_api_token_here
